--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
-attrs==19.3.0
-importlib-metadata==1.4.0
-more-itertools==8.1.0
-packaging==20.0
+attrs==21.2.0
+importlib-metadata==4.6.4
+iniconfig==1.1.1
+more-itertools==8.8.0
+packaging==21.0
 pluggy==0.13.1
-py==1.8.1
-pyparsing==2.4.6
-pytest==5.3.2
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
 selenium==3.141.0
-six==1.13.0
-urllib3==1.25.7
-wcwidth==0.1.8
-zipp==0.6.0
+six==1.16.0
+toml==0.10.2
+urllib3==1.26.6
+wcwidth==0.2.5
+zipp==3.5.0
